--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 } */
 
  .btnH{
-    box-shadow: 0 4 0 0 rgba(0, 0,0, 0.15) !important;
-   
+    /* box-shadow: 0 4 0 0 rgba(0, 0,0, 0.15) !important; */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
