--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@
     padding-right: 0;
  
 } */
+ body{
+    font-family: "Roboto", sans-serif;
+ }
+ h1,h2,h3,h4,h5,h6{
+
+
+  font-family: "Roboto Slab", serif;
+  
+
+ }
 
  .btnH{
     /* box-shadow: 0 4 0 0 rgba(0, 0,0, 0.15) !important; */
